mas cambios generales

--- a/Front_End/src/app/componentes/sobre-mi/sobre-mi.component.html
+++ b/Front_End/src/app/componentes/sobre-mi/sobre-mi.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
       <span>
-          <h1>Acerca de mí</h1>
+          <h1>Sobre de mí</h1>
           <p>Tengo 33 años, emprendedora en el area de sublimacion. Actualemente estudio para desarrolador full stack.</p>
       </span>
   </div>
