--- a/Front_End/src/app/componentes/banner/banner.component.html
+++ b/Front_End/src/app/componentes/banner/banner.component.html
@@ -1,4 +1,4 @@
 <div>
-  <img src="../../../assets/Banner gris para nuevos accesorios.png" alt="">
+  <img src="../../../assets/MI PORFOLIO.png" alt="">
 </div>
 
