--- a/Front_End/src/app/componentes/logo-ap/logo-ap.component.css
+++ b/Front_End/src/app/componentes/logo-ap/logo-ap.component.css
@@ -14,7 +14,7 @@
   }
 
   .btn-light{
-    background-color: #E2DEA9;
+    background-color: #005086;
     border: #9e6bfe;
     color: white;
     font-size: 20px;
