--- a/Front_End/src/app/componentes/proyecto/proyecto.component.css
+++ b/Front_End/src/app/componentes/proyecto/proyecto.component.css
@@ -1,6 +1,7 @@
 .row{
   padding: 20px;
-  background-color: #E2DEA9;
+  background-color: #005086;
+  color: #F7D6BF
 }
 .contenedor{
   width: auto;
