--- a/Front_End/src/app/app.component.html
+++ b/Front_End/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-header></app-header>
-<app-sobre-mi></app-sobre-mi>
-<app-experiencia-laboral></app-experiencia-laboral>
-<app-educacion></app-educacion>
-<app-hy-s></app-hy-s>
-<app-proyecto></app-proyecto>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
