--- a/Front_End/src/app/componentes/hy-s/hy-s.component.html
+++ b/Front_End/src/app/componentes/hy-s/hy-s.component.html
@@ -2,93 +2,112 @@
   <h1>Hard & Soft skills</h1>
   <div class="text-center col-sm-4 col-md-4 col-lg-4">
       <circle-progress
-          [percent]="60"
-          [radius]="70"
-          [showUnits]="false"
-          [title]="'HTML'"
-          [titleColor]="'#D18CE0'"
-          [titleFontSize]="'1em'"
-          [showUnits]="false"
-          [showSubtitle]="false"
-          [outerStrokeWidth]="10"
-          [innerStrokeWidth]="5"
-          [outerStrokeColor]="'#EEEEEE'"
-          [innerStrokeColor]="'#ECA6A6'"
-          [animation]="true"
-          [animationDuration]="600"
+      [percent]="100"
+      [radius]="70"
+      [showUnits]="false"
+      [title]="'HTML'"
+      [titleColor]="'#FFFFFF'"
+      [titleFontSize]="'1em'"
+      [showUnits]="false"
+      [showSubtitle]="false"
+      [outerStrokeWidth]="10"
+      [innerStrokeWidth]="5"
+      [outerStrokeColor]="'#B0CAC7'"
+      [innerStrokeColor]="'#B0CAC7'"
+      [animation]="false"
+      [animationDuration]="600"
+
+
       ></circle-progress>
   </div>
   <div class="text-center col-sm-4 col-md-4 col-lg-4">
       <circle-progress
-          [percent]="50"
+          [percent]="100"
           [radius]="70"
           [showUnits]="false"
           [title]="'CSS'"
-          [titleColor]="'#D18CE0'"
+          [titleColor]="'#FFFFFF'"
           [titleFontSize]="'1em'"
           [showUnits]="false"
           [showSubtitle]="false"
           [outerStrokeWidth]="10"
           [innerStrokeWidth]="5"
-          [outerStrokeColor]="'#EEEEEE'"
-          [innerStrokeColor]="'#ECA6A6'"
-          [animation]="true"
+          [outerStrokeColor]="'#B0CAC7'"
+          [innerStrokeColor]="'#B0CAC7'"
+          [animation]="false"
           [animationDuration]="600"
       ></circle-progress>
   </div>
   <div class="text-center col-sm-4 col-md-4 col-lg-4">
       <circle-progress
-          [percent]="40"
+          [percent]="100"
           [radius]="70"
           [showUnits]="false"
           [title]="'JAVA SCRIPT'"
-          [titleColor]="'#D18CE0'"
+          [titleColor]="'#FFFFFF'"
           [titleFontSize]="'1em'"
           [showUnits]="false"
           [showSubtitle]="false"
           [outerStrokeWidth]="10"
           [innerStrokeWidth]="5"
-          [outerStrokeColor]="'#EEEEEE'"
-          [innerStrokeColor]="'#ECA6A6'"
-          [animation]="true"
+          [outerStrokeColor]="'#B0CAC7'"
+          [innerStrokeColor]="'#B0CAC7'"
+          [animation]="false"
           [animationDuration]="600"
       ></circle-progress>
   </div>
   <div class="text-center col-sm-4 col-md-4 col-lg-4">
       <circle-progress
-          [percent]="30"
+          [percent]="100"
           [radius]="70"
           [showUnits]="false"
           [title]="'MYSQL'"
-          [titleColor]="'#D18CE0'"
+          [titleColor]="'#FFFFFF'"
           [titleFontSize]="'1em'"
           [showUnits]="false"
           [showSubtitle]="false"
           [outerStrokeWidth]="10"
           [innerStrokeWidth]="5"
-          [outerStrokeColor]="'#EEEEEE'"
-          [innerStrokeColor]="'#ECA6A6'"
-          [animation]="true"
+          [outerStrokeColor]="'#B0CAC7'"
+          [innerStrokeColor]="'#B0CAC7'"
+          [animation]="false"
           [animationDuration]="600"
       ></circle-progress>
   </div>
   <div class="text-center col-sm-4 col-md-4 col-lg-4">
       <circle-progress
-          [percent]="40"
+          [percent]="100"
           [radius]="70"
           [showUnits]="false"
           [title]="'JAVA'"
-          [titleColor]="'#D18CE0'"
+          [titleColor]="'#FFFFFF'"
           [titleFontSize]="'1em'"
           [showUnits]="false"
           [showSubtitle]="false"
           [outerStrokeWidth]="10"
           [innerStrokeWidth]="5"
-          [outerStrokeColor]="'#EEEEEE'"
-          [innerStrokeColor]="'#ECA6A6'"
-          [animation]="true"
+          [outerStrokeColor]="'#B0CAC7'"
+          [innerStrokeColor]="'#B0CAC7'"
+          [animation]="false"
           [animationDuration]="600"
       ></circle-progress>
   </div>
+  <div class="text-center col-sm-4 col-md-4 col-lg-4">
+    <circle-progress
+        [percent]="100"
+        [radius]="70"
+        [showUnits]="false"
+        [title]="'GITHUB'"
+        [titleColor]="'#FFFFFF'"
+        [titleFontSize]="'1em'"
+        [showUnits]="false"
+        [showSubtitle]="false"
+        [outerStrokeWidth]="10"
+        [innerStrokeWidth]="5"
+        [outerStrokeColor]="'#B0CAC7'"
+        [innerStrokeColor]="'#B0CAC7'"
+        [animation]="false"
+        [animationDuration]="600"
+    ></circle-progress>
 
 </div>
