--- a/Front_End/src/app/componentes/sobre-mi/sobre-mi.component.css
+++ b/Front_End/src/app/componentes/sobre-mi/sobre-mi.component.css
@@ -1,29 +1,30 @@
 .row{
   padding: 20px;
+  color: #F7D6BF
 }
 div{
-  background-color: #E2DEA9;
+  background-color: #005086;
   text-align: center;
 }
 /*Estilo de la foto de perfil*/
 @media (min-width: 576px){
   #fotodeperfil{
       position: absolute;
-      width: 13%;
+      width: 12%;
       border-radius: 50%;
-      box-shadow: 3px 3px 3px #ECA6A6;
+      box-shadow: 3px 3px 3px #252525;
       left: 3%;
-      top:470px;
+      top:240px;
   }
 }
 @media (max-width: 575px){
   #fotodeperfil{
       position: absolute;
-      width: 30%;
+      width: 28%;
       border-radius: 50%;
-      box-shadow: 3px 3px 3px #E2DEA9;
+      box-shadow: 3px 3px 3px #005086;
       left: 33%;
-      top:550px;
+      top:310px;
   }
 }
 
