cambios en modales prueba
prueba 1 cambios en modales

--- a/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
+++ b/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
@@ -1,6 +1,114 @@
-<div *ngFor="let experiencia of experiencias">
-  <div>{{experiencia.empresa}}
+<div class="fondo">
+  <div class="contenido" id="main-container">
+      <div id="trabajos">
 
-  </div>
 
+
+    <h2 class="trabajos">Experiencia Laboral <button (click)="onOpenModal(null!,'add')" type="button" class="botones_contenido">
+      <i class="fa-light fa-plus"></i>
+  </button> </h2>
 </div>
+
+
+
+
+      <div  class="listatrabajos" *ngFor="let experiencia of experiencia">
+        <div class="listatrabajosparrafos">
+
+        <p class="nombreempresa"><span class="titulo">{{experiencia?.empresa}} - {{experiencia?.cargo}}</span></p>
+        <h2>{{experiencia.FechaIngreso}}  {{experiencia.FechaEgreso}}</h2>
+      </div>
+
+      <div id="eliminar-editar-trabajos">
+        <button (click)="onOpenModal(experiencia,'edit')" type="button" class="botones_contenido">
+            <i class="fa-solid fa-pen"></i>
+        </button>
+        <button (click)="onOpenModal(experiencia,'delete')" type="button" class="botones_contenido">
+            <i class="fa-solid fa-eraser"></i>
+        </button>
+
+
+      <!-- Modal para agregar Experiencia -->
+<div class="modal fade" id="addExperienciaModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="addExperienciaModal" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Agregar Experiencia</h5>
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Cerrar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+      <div class="modal-body">
+        <form #addForm="ngForm" (ngSubmit)="onAddExperiencia(addForm)">
+              <label for="cargo">Cargo</label><br>
+              <input ngModel type="text" name="cargo"  class="form-control">
+              <label for="Empresa">Empresa</label><br>
+              <input ngModel type="text" name="Empresa"  class="form-control">
+              <label for="FechaIngreso">FechaInicio</label><br>
+              <input ngModel type="text" name="FechaIngreso"  class="form-control">
+              <label for="FechaEgreso">FechaEgreso</label><br>
+              <input ngModel type="text" name="FechaEgreso"  class="form-control">
+        <div class="modal-footer">
+              <button type="button" id="add-experiencia-modal" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+              <button [disabled]="addForm.invalid" type="submit" class="btn">Agregar</button>
+      </div>
+    </form>
+    </div>
+  </div>
+</div>
+</div>
+
+
+<!-- Modal para actualizar Experiencia -->
+<div class="modal fade" id="updateExperienciaModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="updateExperienciaModal" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">Editar Experiencia</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <form #editForm="ngForm">
+                  <label for="cargo">cargo</label><br>
+                  <input ngModel="{{editExperiencia?.cargo}} " type="text" name="cargo"  class="form-control"><br>
+                  <label for="Empresa">Empresa</label><br>
+                  <input ngModel="{{editExperiencia?.empresa}}" type="text" name="Empresa"  class="form-control">
+                  <label for="fechaIngreso">Fecha de Igreso</label><br>
+                  <input ngModel="{{editExperiencia?.FechaIngreso}}" type="text" name="fechaIngreso" class="form-control">
+                  <label for="fechaEgreso">Fecha de Egreso</label><br>
+                  <input ngModel="{{editExperiencia?.FechaEgreso}}" type="text" name="fechaEgreso"  class="form-control">
+                <div class="modal-footer">
+                      <button id="update-experiencia-modal" type="button" class="btn" data-dismiss="modal">Cancelar</button>
+                      <button (click)="onUpdateExperiencia(editForm.value)" type="button" class="btn" data-dismiss="modal">Guardar cambios</button>
+                  </div>
+              </form>
+          </div>
+
+      </div>
+  </div>
+</div>
+
+<!-- Modal para borrar Experiencia -->
+<div class="modal fade" id="deleteExperienciaModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="deleteExperienciaModal" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <p>Esta acción eliminará  "{{deleteExperiencia?.cargo}}". ¿Desea continuar?</p>
+          </div>
+          <div class="modal-footer">
+          <button type="button" class="btn" data-dismiss="modal">No</button>
+          <button (click)="onDeleteExperiencia(deleteExperiencia.id)" type="button" class="btn" data-dismiss="modal">Sí</button>
+          </div>
+      </div>
+  </div>
+</div>
+
