--- a/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.css
+++ b/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.css
@@ -1,10 +1,168 @@
-.row{
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #005086;
+  color: aliceblue;
+}
+
+.contenido h4 button {
+  text-align: right;
+}
+
+.contenido h4 button i {
+  font-size: 12px;
+  padding: 5px;
+  color: #b1189c;
+
+
+}
+
+.listatrabajos {
+  padding: 4px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-self: center;
+}
+
+
+
+.listatrabajosparrafos:hover {
+  box-shadow: 2px 5px 15px #b1189c;
+  transition: 0.2s;
+}
+.listatrabajosparrafos p {
+  font-size: 15px;
+}
+
+.listatrabajosparrafos p span {
+  font-weight: bolder;
+  font-size: 17px;
+}
+
+.nombreempresa {
+  font-size: 15px;
+}
+
+
+#eliminar-editar-trabajos button i {
+  color: #b1189c;
+  font-size: 10px;
+}
+
+.botones_contenido {
+  border: none;
+  background: none;
+  padding: 2px;
+}
+
+.boton_edicion_texto {
+  padding: 2px 10px;
+  margin-top: 10px;
+  background: #7C3772;
+  color:#f8e6f1;
+  border-radius: 5px;
+  font-size: 10px;
+  border: none;
+
+
+}
+
+.close {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: none;
+  background:#f8e6f1;
+  color: #7C3772;
+}
+
+.boton_eliminar {
+  padding: 2px 10px;
+  margin-top: 10px;
+  background: #7C3772;
+  color:#f8e6f1;
+  border-radius: 5px;
+  font-size: 10px;
+  border: none;
+}
+
+
+.modal-dialog {
+  width: 50%;
+  padding: 15px;
+  justify-content: center;
+  align-self: center;
+  top: 10%;
+  left: 25%;
+}
+
+
+
+.modal-body {
+  padding: 10px;
+}
+
+.modal-header button {
+  border: none;
+  background: none;
+  text-align: right;
+  color: #720F64;
+}
+
+.modal-header h5 {
+  color: #720F64;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.modal-content {
   padding: 20px;
-  color: #F7D6BF
+  background-color: rgb(248, 245, 247);
 }
-div{
-  background: #005086;
+
+.form {
+  line-height: 20px;
 }
-h1, h3{
-  display: inline;
+
+.modal-body form label {
+  line-height: 7px;
+  margin-top: 5px;
+  color: #720F64;
+}
+
+.modal-footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  padding: 15px 10px 0px 10px;
+
+}
+
+.modal-footer button {
+  border: none;
+  color: #720F64;
+  margin: 5px;
+  padding: 2px 5px;
+  border-color: none;
+
+}
+
+.modal-footer .boton-editar {
+  border: none;
+  color: #720F64;
+  margin: 5px;
+  padding: 2px 5px;
+  border-color: none;
+}
+
+.modal-body form input {
+  width: 100%;
+}
+
+#update-experiencia-modal {
+  padding: 3px 5px;
+  color: #720F64;
 }
