cambios en exp laboral

--- a/Front_End/src/app/componentes/educacion/educacion.component.html
+++ b/Front_End/src/app/componentes/educacion/educacion.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <h1>Educacion</h1>
-  <div class="col-lg-1"></div>
-  <div class="col-lg-11">
+  <div class="col-lg-11"></div>
+  <div>
     <ul>
       <li><h1>educacion</h1> -
       <h3>(years)</h3></li>
