--- a/Front_End/src/app/componentes/sobre-mi/sobre-mi.component.html
+++ b/Front_End/src/app/componentes/sobre-mi/sobre-mi.component.html
@@ -9,7 +9,10 @@
   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
       <span>
           <h1>Sobre de mí</h1>
-          <p>Tengo 33 años, emprendedora en el area de sublimacion. Actualemente estudio para desarrolador full stack.</p>
+          <p>ME LLAMO VERONICA, TENGO 33 AÑOS, TRABAJE 9 AÑOS EN UN CALL CENTER, ESTUDIE DOS AÑOS DE COMUNICACION SOCIAL.
+            ACTUALMENTE TENGO MI PROPIO EMPRENDIMIENTO DE SUBLIMACION POR LO QUE ME HE CAPACITADO EN EL AREA DE DISEÑO GRAFICO,
+            MANEJO DE REDES, MARKETIN Y PUBLICIDAD, ME CONSIDERO AUTODIDACTA, TRATO DE APRENDER CADA DIA UN POCO MAS.
+            EN ESTE MOMENTO MI CAPACITACION ESTA DIRIGIDA AL AREA DE PROGRAMACION.</p>
       </span>
   </div>
 </div>
