--- a/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.css
+++ b/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.css
@@ -1,57 +1,13 @@
 * {
-
   padding:1px 1px 2px 10px;
 
   background-color: #005086;
-  color: aliceblue;
+  color:  #FFFFFF;
 }
 
-.contenido h4 button {
-  text-align: right;
+.row{
+  padding: 40px;
 }
-
-.contenido h4 button i {
-  font-size: 12px;
-  padding: 5px;
-  color: #f8e6f1;
-
-
-}
-
-.listatrabajos {
-  padding: 4px;
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-self: center;
-  align-self: center;
-}
-
-
-
-.listatrabajosparrafos:hover {
-  box-shadow: 2px 2px 10px #f8e6f1;
-  transition: 0.2s;
-}
-.listatrabajosparrafos p {
-  font-size: 15px;
-}
-
-.listatrabajosparrafos p span {
-  font-weight: bolder;
-  font-size: 17px;
-}
-
-.nombreempresa {
-  font-size: 15px;
-}
-
-
-#eliminar-editar-trabajos button i {
-  color: #f8e6f1;
-  font-size: 10px;
-}
-
 .botones_contenido {
   border: none;
   background: none;
@@ -66,103 +22,4 @@
   border-radius: 5px;
   font-size: 10px;
   border: none;
-
-
-}
-
-.close {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  border: none;
-  background:#f8e6f1;
-  color: #f8e6f1;
-}
-
-.boton_eliminar {
-  padding: 2px 10px;
-  margin-top: 10px;
-  background: #f8e6f1;
-  color:#f8e6f1;
-  border-radius: 5px;
-  font-size: 10px;
-  border: none;
-}
-
-
-.modal-dialog {
-  width: 50%;
-  padding: 15px;
-  justify-content: center;
-  align-self: center;
-  top: 10%;
-  left: 25%;
-}
-
-
-
-.modal-body {
-  padding: 10px;
-}
-
-.modal-header button {
-  border: none;
-  background: none;
-  text-align: right;
-  color: #f8e6f1;
-}
-
-.modal-header h5 {
-  color: #f8e6f1;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-.modal-content {
-  padding: 20px;
-  background-color: rgb(248, 245, 247);
-}
-
-.form {
-  line-height: 20px;
-}
-
-.modal-body form label {
-  line-height: 7px;
-  margin-top: 5px;
-  color: #f8e6f1;
-}
-
-.modal-footer {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  padding: 15px 10px 0px 10px;
-
-}
-
-.modal-footer button {
-  border: none;
-  color: #f8e6f1;
-  margin: 5px;
-  padding: 2px 5px;
-  border-color: none;
-
-}
-
-.modal-footer .boton-editar {
-  border: none;
-  color: #f8e6f1;
-  margin: 5px;
-  padding: 2px 5px;
-  border-color: none;
-}
-
-.modal-body form input {
-  width: 100%;
-}
-
-#update-experiencia-modal {
-  padding: 3px 5px;
-  color: #f8e6f1;
 }
